# mcp-powerpoint

./: .PUBLISHING.md.swp  .gitignore  .~lock.MDA-250083-BNB-20250904.v1.RFI.pptx#  .~lock.demo_recreated.pptx#  .~lock.mda.pptx#  MDA-250083-BNB-20250904.v1.RFI.pptx  PUBLISHING.md  README_POWERPOINT_TOOLS.md  client.py  client_modes.py  debug_fill_colors.py  debug_financials.py  debug_font_application.py  debug_shadow_text.py  debug_text_formatting.py  debug_white_text.py  debug_white_text_issues.py  demo_presentation.json  demo_recreated.pptx  main.py  mcp-config.json  mda.pptx  powerpoint_server.py  presentation_data.json  presentation_with_descriptive_names.json  prompt.md  pyproject.toml  recreated_presentation.pptx  shape_naming_server.py  simple_rag_test.py  start.sh  test_direct.pptx  test_direct.py  test_document.txt  test_line_width.py  test_presentation.py  test_rag_workflow.py  test_shape_editor.html  test_simple.pptx  verify_fix.py
.github/workflows/: publish.yml
MDA/: financial_details.txt  project_info.txt  strategic_goals.txt
data/web_chroma_db/: chroma.sqlite3
documents/: product_requirements.md  sample_business_plan.txt
mcp_powerpoint/: __main__.py  document_processor.py  powerpoint_models.py  powerpoint_server.py  rag_server.py  vector_store.py  web_server.py
mcp_powerpoint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
outputs/: 54733983-7fe2-4c55-a9ea-e1cb49c66c56_enhanced.json  63a3add5-7cdb-4ca5-9c49-5012b4d1df5b_enhanced.json  923a9538-c2cc-430c-baff-7074366c4ffa_enhanced.json  ac25b624-ef94-4f69-b28b-697bb88273dc_enhanced.json  ac25b624-ef94-4f69-b28b-697bb88273dc_enhanced.pptx
simple_test_db/: chroma.sqlite3
test_case/: simple_presentation.json
test_case/chroma_db/: chroma.sqlite3
test_case/documents/: project_overview.txt  requirements.txt
test_case/test_chroma_db/: chroma.sqlite3
uploads/: 63a3add5-7cdb-4ca5-9c49-5012b4d1df5b_MDA-250083-BNB-20250904.v1.RFI.pptx
web/static/css/: app.css
web/static/js/: app.js
web/templates/: index.html
