[project]
name = "mcp-powerpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.2",
    "ollama>=0.5.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-pptx>=1.0.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
